--- a/integration_test/cloudbuild.yaml
+++ b/integration_test/cloudbuild.yaml
@@ -130,7 +130,16 @@ steps:
 
         node scripts/run-tests.js \
           --sequential \
-          v2_firestore v2_database v2_storage v2_pubsub v2_eventarc v2_tasks v2_remoteconfig v2_scheduler v2_testlab v2_identity \
+          v2_firestore \
+          v2_database \
+          v2_pubsub \
+          v2_storage \
+          v2_scheduler \
+          v2_tasks \
+          v2_eventarc \
+          v2_alerts \
+          v2_testlab \
+          v2_remoteconfig \
           --use-published-sdk=file:$$WHEEL_FILE
 
 # Artifacts to store
