fix(integration_tests): use correct alert types

--- a/integration_test/config/suites.yaml
+++ b/integration_test/config/suites.yaml
@@ -181,7 +181,7 @@ suites:
     functions:
       - name: alertsOnAlertPublished
         trigger: onAlertPublished
-        alertType: "billing.planAutomatedUpdatePublished"
+        alertType: "billing.planAutomatedUpdate"
 
   # V2 Test Lab triggers
   - name: v2_testlab
